crates/oxc_react_compiler/tests/snapshots/error.todo-round2_identifier_diff.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo-round2_identifier_diff.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: (BuildHIR::lowerExpression) Handle ClassExpression expressions", labels: [LabeledSpan { label: None, span: Span { start: 368, end: 755 }, primary: false }], help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
