crates/oxc_react_compiler/tests/snapshots/error.todo-rust-as-expression-assignment-target.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo-rust-as-expression-assignment-target.tsx
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: [FindContextIdentifiers] Cannot handle Object destructuring assignment target TSAsExpression", labels: One([LabeledSpan { label: None, span: SourceSpan { offset: SourceOffset(52), length: 32 }, primary: false }]), help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
