crates/oxc_react_compiler/tests/snapshots/error.todo-try-catch-finally.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo-try-catch-finally.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "(BuildHIR::lowerStatement) Handle TryStatement with a finalizer ('finally') clause", labels: [LabeledSpan { label: None, span: Span { start: 97, end: 106 }, primary: true }], help: Some("Rewrite the highlighted code using syntax supported by React Compiler"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Advice, code: OxcCode { scope: Some("react-compiler"), number: Some("Todo") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/unsupported-syntax") } }

// @outputMode:"lint"
function Component() {
	try {
		doWork();
	} catch {
		recover();
	} finally {
		cleanup();
	}
}
